--- a/css/css2.css
+++ b/css/css2.css
@@ -1,6 +1,368 @@
-.left .sec ul li{
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+    list-style: none;
+    margin-left: 30px;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+  
+  .left .sec ul li{
     font-family: 'Cormorant Garamond', serif;
     font-size: 32px;
     list-style: none;
     line-height: 50px;
+    color: black;
+    margin-top: 50px;
+    
 }
+ .sec{
+    margin-top: 200px;
+}
+
+ul a{
+    text-decoration: none;
+}
+
+.left{
+    position: fixed;
+    z-index: 100;
+}
+
+.left .sec ul a li:hover{
+    color: rgb(202, 82, 58);
+}
+
+.about-about{
+    margin-left: 200px;
+    padding-top: 300px;
+    display: inline;
+}
+.about-img{
+    position: absolute;
+}
+.suv-wrap{
+    position: relative;
+}
+
+.about-img img{
+    border-radius: 50%;
+    margin-left: 250px;
+    margin-top: 300px;
+    width:300px
+}
+
+.profile{
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 32px;
+    margin-left: 900px;
+    margin-top: 50px;
+}
+.suv-profile{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 100;
+    font-size: 20px;
+    margin-top: 30px;
+}
+.awords {
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 32px;
+    margin-left: 900px;
+    margin-top: 80px;
+}
+.awords-suv{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 100;
+    font-size: 20px;
+    margin-top: 30px;
+}
+.skils{
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 32px;
+    margin-left: 900px;
+    margin-top: 80px;
+}
+.skils-suv{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 100;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
+.skils-suv img {
+    width: 450px;
+}
+
+span{
+    margin-right: 15px;
+}
+
+.effect-wrap {
+    width: 100vw; 
+    margin-left: 550px;
+    margin-top: 100px;
+}
+.effect-wrap-1 {
+    width: 100vw; 
+    margin-left: 535px;
+    margin-top: 200px;
+}
+.effect-wrap-2 {
+  width: 100vw; 
+  margin-left: 550px;
+  margin-top: 100px;
+}
+.effect7 {
+    position: relative;
+    width: 400px; 
+}
+.effect7 img {
+    width: 500px;
+    filter: saturate(50%);
+    transition: all 0.6s ease 0.2s;
+    backface-visibility: hidden;
+    text-shadow: 0 0 3px #000000;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+.effect7 figcaption {
+    position: absolute;
+    top: 50%; left: 0;
+    width: 500px;
+    height: 250px;
+    padding: 5%;
+    box-sizing: border-box;
+    z-index: 1;
+    line-height: 1.7em;
+    color: #000;
+    font-size: 20px;
+    opacity:1;
+    transition: all 0.5s ease;
+    transform: rotatex(90deg) translate(0, -50%);
+    transform-origin: 0% 0%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+.effect7 figcaption h3 {
+    font-weight: 800;
+    text-transform: uppercase;
+}
+.effect7 figcaption p {
+    font-weight: 500; 
+    margin-bottom: 15px;
+    font-size: 15px;
+}
+.effect7 figcaption .read {
+    padding: 5px;
+    font-size: 0.8em;
+    color: #000;
+    text-decoration: none;
+  
+}
+.effect7 figcaption .read:hover {
+    background: #FFF;
+    color: #000;
+    border: 2px solid #000;  
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.effect7:hover img {
+    transform: rotatex(-180deg);
+    opacity: 0;
+    transition-delay: 0;
+}
+.effect7:hover figcaption {
+    transform: rotatex(0deg) translate(0, -50%);
+    opacity: 1;
+    transition-delay: 0.35s;
+}
+body{
+    overflow-x:hidden;
+}
+
+.button{
+    margin-left: 350px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 100;
+    font-size: 20px;
+    margin-top: 30px;
+    z-index: 99;
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+}
+
+.about .about-img .button :hover{
+    background: rgb(202, 82, 58);
+    color: #fff;
+    border: 2px solid rgb(202, 82, 58);
+    transition: all 0.3s ease;
+}
+
+body {
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-weight: 100;
+    font-size: 12px;
+    line-height: 30px;
+    color: #777;
+
+  }
+  
+  .container {
+    margin: 0 auto;
+    position: relative;
+    width: 600px;
+  }
+  
+  #contact input[type="text"],
+  #contact input[type="email"],
+  #contact input[type="tel"],
+  #contact input[type="url"],
+  #contact textarea,
+  #contact button[type="submit"] {
+    font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+  }
+  
+  #contact {
+    background: #F9F9F9;
+    padding: 25px;
+    margin: 150px 0;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    margin-left: -15px;
+    
+    }
+  
+  #contact h3 {
+    display: block;
+    font-size: 30px;
+    font-weight: 300;
+    margin-bottom: 10px;
+    margin-left: 25px;
+  }
+  
+ 
+  
+  fieldset {
+    border: medium none !important;
+    margin: 0 0 0 25px;
+    padding: 0;
+    width: 500px;
+  }
+  
+  #contact input[type="text"],
+  #contact input[type="email"],
+  #contact input[type="tel"],
+  #contact input[type="url"],
+  #contact textarea {
+    width: 100%;
+    border: 1px solid #ccc;
+    background: #FFF;
+    margin: 0 0 5px;
+    padding: 10px;
+  }
+  
+  #contact input[type="text"]:hover,
+  #contact input[type="email"]:hover,
+  #contact input[type="tel"]:hover,
+  #contact input[type="url"]:hover,
+  #contact textarea:hover {
+    -webkit-transition: border-color 0.3s ease-in-out;
+    -moz-transition: border-color 0.3s ease-in-out;
+    transition: border-color 0.3s ease-in-out;
+    border: 1px solid #aaa;
+  }
+  
+  #contact textarea {
+    height: 100px;
+    max-width: 100%;
+    resize: none;
+  }
+  
+  #contact button[type="submit"] {
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    color: #FFF;
+    margin: 0 0 5px;
+    padding: 10px;
+    font-size: 15px;
+  }
+  
+  #contact button[type="submit"]:hover {
+    -webkit-transition: background 0.3s ease-in-out;
+    -moz-transition: background 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  #contact button[type="submit"]:active {
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+  }
+  
+  .copyright {
+    text-align: center;
+  }
+  
+  #contact input:focus,
+  #contact textarea:focus {
+    outline: 0;
+    border: 1px solid #aaa;
+  }
+  
+  ::-webkit-input-placeholder {
+    color: #888;
+  }
+  
+  :-moz-placeholder {
+    color: #888;
+  }
+  
+  ::-moz-placeholder {
+    color: #888;
+  }
+  
+  :-ms-input-placeholder {
+    color: #888;
+  }
